<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/etOrigenItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvOrigen1"
                android:layout_weight="0.20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvOrigen"
                android:layout_weight="0.49" />

            <TextView
                android:text="@string/etFecha1Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etFecha1"
                android:layout_weight="0.20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtFecha"
                android:layout_weight="0.49" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/etDestinoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDestino2"
                android:layout_weight="0.20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDestino"
                android:layout_weight="0.49" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNumPlazas1"
                android:layout_weight="0.20"
                android:text="@string/etNumPlazasItem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNumPlazas"
                android:layout_weight="0.49" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPrecio"
            android:textSize="20sp"
            android:layout_weight="0.88" />
    </LinearLayout>

</LinearLayout>